# WeatherSystem

./: .gitignore  README.md  main.py  pyproject.toml
api/: __init__.py  db_api.py
config/: __init__.py  api_setup.py  db_setup.py  logging_setup.py
cron/: crontab.txt
database/: __init__.py  connection_sqlalchemy.py  db_tables.py  db_views.py  full_backup.py
src/: RunPythonScriptHourly.xml~  __init__.py  benchmark.py  city_converter.py  weather_data.py  weather_sequential.py  weather_thread.py
tests/: __init__.py  test_weather_api.py
